--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tape Recorder</title>
+    <link rel="icon" href="/favicon.ico">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link href="/css/main.css" rel="stylesheet">
+    <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
   <body>
     <div id="app">
