Removed incorrect transition name

--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <div id="app">
-      <transition name="dialog-fade">
+      <transition>
         <component :is="page"></component>
       </transition>
     </div>
