--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <link rel="manifest" href="/manifest.json">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700,400italic">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="/css/main.css" rel="stylesheet">
+    <link rel="stylesheet" href="/css/main.css">
     <script src="https://apis.google.com/js/client.js?onload=checkAuth"></script>
   </head>
   <body>
