--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
   <body>
     <div id="app">
       <transition>
-        <component :is="page"></component>
+        <router-view></router-view>
       </transition>
     </div>
     <script src="/js/main.bundle.js" charset="utf-8"></script>
