--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <title>Tape Recorder</title>
   <meta name="viewport" content="width=device-width, initial-scale=1">
+  <link href="https://fonts.googleapis.com/css?family=Roboto:300,500" rel="stylesheet"> 
   <link rel="stylesheet" type="text/css" media="screen" href="./index.css" />
 </head>
 <body>
