add icons, change title

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       rel="stylesheet"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tape Recorder</title>
+    <title>Ready</title>
   </head>
   <body>
     <div id="app"></div>
