edit names in track list
this commit adds the ability to click on
track names in the list and edit them.
also changes `title` in some places so
everywhere is using `name` for consistency

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       href="https://fonts.googleapis.com/css2?family=Cousine:wght@700&family=Roboto:wght@100;300&display=swap"
       rel="stylesheet"
     />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <title>Tape Recorder</title>
   </head>
   <body>
